--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Slope 3 Unblocked - ubg235 GC</title>
+    <title>slop</title>
     <link rel="shortcut icon" href="unity/favicon.ico">
     <link rel="stylesheet" href="unity/style.css">
     <script src="unity/dummy.js"></script>
